tests/reject/bad_tricky.ul
void f() { }
junk 123
int g () { }